--- a/assignment1/Assignment 1.ipynb
+++ b/assignment1/Assignment 1.ipynb
@@ -29,10 +29,14 @@
     "\n",
     "*Def.* $V$ expectation of return if agent follows policy $\\pi$ starting from state $s$ and taking action $a$\n",
     "\n",
-    "```First we would set up a table of numbers, one for each possible state\n",
+    "```\n",
+    "First we would set up a table of numbers, one for each possible state\n",
     "of the game. Each number will be the latest estimate of the probability of our winning\n",
     "from that state. We treat this estimate as the state’s value, and the whole table is the\n",
-    "learned value function.``` Sutton, Barto, page 9\n",
+    "learned value function.\n",
+    "``` \n",
+    "\n",
+    "Sutton, Barto, page 9\n",
     "\n",
     "| $s_{1}$ | $s_{n-2}$ | $s_{n-1}$ |\n",
     "|---------|-----------|-----------|\n",
@@ -49,14 +53,14 @@
     "\n",
     "It shouldn't unless discount factor is zero. Value function denotes probablity of winnign starting from state $s_{i}$ and agent should win in all cases in this example. \n",
     "\n",
-    "**(c) Question:**\n",
+    "**(d) Question:**\n",
     "\n",
     "After adding a constant $c$ to all rewards now consider scaling all the rewards by a constant a\n",
     "(i.e. $r_{new} = a(c + r_{old}))$. Find the new optimal value function for all states $s_{i}$ and the goal\n",
     "state $G$. Does that change the optimal policy? Explain your answer, If yes, give an example\n",
     "of a and c that changes the optimal policy. [5 pts]\n",
     "\n",
-    "**(c) Answer:**\n",
+    "**(d) Answer:**\n",
     "\n",
     "We could reverse the game, by making c = -1 for any negative a. That would make state g unfeasible with 0 reward and any other state have positive reward."
    ]
@@ -76,10 +80,62 @@
     "policy using value iteration. Consider the infinite MDP with discount factor $\\gamma$ < 1 illustrated in\n",
     "Figure 2. It consists of 3 states, and rewards are given upon taking an action from the state. From\n",
     "state $s_{0}$, action $a_{1}$ has zero immediate reward and causes a deterministic transition to state $s_{1}$ where\n",
-    "there is reward +1 for every time step afterwards (regardless of action). From state $s_{0}$, action $a_{2}$ causes a deterministic transition to state s2 with immediate reward of $\\gamma^{2}/ 􀀀 \n",
-    ") but state s2 has\n",
-    "zero reward for every time step afterwards (regardless of action)."
+    "there is reward +1 for every time step afterwards (regardless of action). From state $s_{0}$, action $a_{2}$ causes a deterministic transition to state s2 with immediate reward of $\\gamma^{2}/1-\\gamma$  but state $s_{2}$ has\n",
+    "zero reward for every time step afterwards (regardless of action).\n",
+    "\n",
+    "![Figure-2](images/figure-2.png \"Figure-2\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**(a) Question:**\n",
+    "\n",
+    "What is the total discounted return $\\sum\\gamma^{t}r_{t}$ of taking action $a_{1}$ from state $s_{0}$ at time step\n",
+    "t = 0? [5 pts]\n",
+    "\n",
+    "**(a) Answer:**\n",
+    "\n",
+    "$\\sum\\gamma^{t}$\n",
+    "\n",
+    "**(a) Correction:**\n",
+    "Above equals to $\\gamma/(1-\\gamma)$\n",
+    "\n",
+    "**(b) Question:**\n",
+    "\n",
+    "(b) What is the total discounted return $\\sum\\gamma^{t}r_{t}$ of taking action $a_{2}$ from state $s_{0}$ at time step\n",
+    "t = 0? What is the optimal action? [5 pts]\n",
+    "\n",
+    "$\\gamma^{2}/(1-\\gamma)$\n",
+    "\n",
+    "Optimal action maximizes expected sum of returns. $a_{1} > a_{2}$ for all positive $\\gamma$\n",
+    "\n",
+    "**(c) Question:**\n",
+    "\n",
+    "![Figure-3](images/q-2-c.png \"Question 2 C\")\n",
+    "\n",
+    "**(c) Answer:**\n",
+    "\n",
+    "```\n",
+    "Value iteration is a method of computing an optimal MDP policy and its value.\n",
+    "\n",
+    "Value iteration starts at the end and then works backward, refining an estimate of either Q* or V*. There is really no end, so it uses an arbitrary end point. \n",
+    "``` \n",
+    "\n",
+    "https://artint.info/html/ArtInt_227.html\n",
+    "\n",
+    "**(c) Correction:**\n",
+    "\n",
+    "![Figure-4](images/solution-2-c.png \"Question 2 C\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
