--- a/assignment1/Assignment 1.ipynb
+++ b/assignment1/Assignment 1.ipynb
@@ -125,6 +125,8 @@
     "\n",
     "https://artint.info/html/ArtInt_227.html\n",
     "\n",
+    "Remember school algebra dood\n",
+    "\n",
     "**(c) Correction:**\n",
     "\n",
     "![Figure-4](images/solution-2-c.png \"Question 2 C\")"
